# libodbcxx

./: BUILD  MODULE.bazel  README.md
bazel/: config.h.linux  odbcxx.config.h.linux
tests/: BUILD
