
module(
    name = 'libodbcxx',
    repo_name = 'github_libodbcxx',
    version = '0.2.5',
)

bazel_dep(
    name = 'bazel_skylib',
    version = '1.7.1',
)

bazel_dep(
    name = 'unixodbc',
    repo_name = 'github_unixodbc',
    version = '2.3.12',
)

bazel_dep(
    name = 'bazel_module_versions',
    version = '0.0.0',
)

################################################################################
# dependency overrides
################################################################################

archive_override(
    module_name = 'unixodbc',
    integrity = "sha256-rz1L9G8/voiPUU9wJDhg9nQ1g0ynFQaUMGCqshl/PiE=",
    urls = ['https://github.com/coding-heresy/unixODBC/archive/refs/tags/2.3.12.tar.gz'],
    strip_prefix = 'unixODBC-2.3.12',
)

archive_override(
    module_name = 'bazel_module_versions',
    integrity = "sha256-t0dFYSC417MvkHbDdhk8GePkp9r4nnVP0VnqGXSsHf8=",
    urls = ['https://github.com/coding-heresy/bazel_module_versions/archive/refs/tags/0.0.0.tar.gz'],
    strip_prefix = 'bazel_module_versions-0.0.0',
)

################################################################################
# support for accessing dependent module versions
################################################################################

module_versions = use_extension('@bazel_module_versions//:extensions.bzl', 'dependent_module_versions')
use_repo(module_versions, 'module_versions')
